# Rocket-Roles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: memory_auth.rs  postgres_auth.rs  redis_auth.rs
rocket_roles_macros/: Cargo.toml
rocket_roles_macros/src/: lib.rs
src/: auth.rs  lib.rs  macros.rs
src/tests/: auth_tests.rs
