[package]
name = "rocket_roles"
version = "0.1.0"
edition = "2021"
description = "A flexible permission-based authentication macro for Rocket"
license = "MIT"
repository = "https://github.com/tristanpoland/rocket-roles"
keywords = ["rocket", "authentication", "authorization", "web", "permissions"]
categories = ["web-programming"]
readme = "README.md"

[workspace]
members = [
    "rocket_roles_macros",
]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
async-trait = "0.1.50"
futures = "0.3"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
rocket_roles_macros = { path = "./rocket_roles_macros", version = "0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "mysql"] }
serde_json = "1.0"
rand = "0.8"
mockall = "0.11"

# [[example]]
# name = "postgres_auth"
# path = "examples/postgres_auth.rs"

# [[example]]
# name = "redis_auth"
# path = "examples/redis_auth.rs"

# [[example]]
# name = "memory_auth"
# path = "examples/memory_auth.rs"
